# HL2IOBoard

./: CMakeLists.txt  MIT.txt  README.md  hl2ioboard.h  i2c_registers.h  main.c
HL2IOEndcap_v23/hl2io_40b/: HL2IO_endcap.kicad_pcb  HL2IO_endcap.kicad_prl  HL2IO_endcap.kicad_pro
HL2IOEndcap_v23/hl2io_55b/: HL2IO_endcap.kicad_pcb  HL2IO_endcap.kicad_prl  HL2IO_endcap.kicad_pro
KiCad/: .parts.py.swp  BOM.txt  HL2IOBoard-cache.lib  HL2IOBoard.csv  HL2IOBoard.kicad_pcb  HL2IOBoard.kicad_pcb-bak  HL2IOBoard.kicad_prl  HL2IOBoard.kicad_pro  HL2IOBoard.kicad_sch  HL2IOBoard.net  HL2IOBoard.pro  HL2IOBoard.sch  HL2IOBoard.sch-bak  HL2IOBoard.xml  fp-info-cache
KiCad/gerber/: HL2IOBoard-B_Cu.gbl  HL2IOBoard-B_Cu.gbr  HL2IOBoard-B_Fab.gbr  HL2IOBoard.drl  (+28 more)
g4brk_k3band/: CMakeLists.txt  README.md  main.c
ks7roh_hr50+/: README.md  main.c
ks7roh_hr500/: .gitignore  README.md  main.c  main1.c
m0hpf_spe/: CMakeLists.txt  README.md  main.c
n1adj_hr50/: CMakeLists.txt  README.md  main.c
n2adr_basic/: CMakeLists.txt  main.c
n2adr_lib/: CMakeLists.txt  configure_pins.c  fcode2bcode.c  frequency_code.c  frequency_code.py  ft817_band_volts.c  i2c_slave_handler.c  icom_ah4.c  led_flasher.c  test_pattern.c  tx_freq_to_band.c
n2adr_test/: CMakeLists.txt  main.c
software/: n2adr_ioboard.pyw
w5eim/: main.c
yeasu_bcd/: CMakeLists.txt  ReadMe.txt  main.c  main.uf2
zl2te_arduino/: README.md  configure_pins.ino  fcode2bcode.ino  frequency_code.ino  ft817_band_volts.ino  hl2ioboard.h  i2c_registers.h  i2c_slave_handler.ino  icom_ah4.ino  led_flasher.ino  zl2te_arduino.ino
(+44 files in other folders)
